2004-01-09  David Vrabel  <dvrabel@arcom.com>
        
	* src/pci.c (cyg_pci_find_device): Remove debug message.

2003-11-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/pci.c (cyg_pci_find_device): Removed a debug print which should
	not be there and is causing an warning.

2003-11-18  Manu Sharma  <manu.sharma@ascom.com>

        * src/pci.c : Additional changes in cyg_pci_get_device_info, 
        cyg_pci_set_device_info and cyg_pci_configure_device to be able
        to support non-contiguous BARs.

2003-09-29  Nick Garnett  <nickg@balti.calivar.com>

	* src/pci.c (cyg_pci_get_device_info): Removed check for inactive
	BARs since the requirement for the BARs to be contiguous has been
	relaxed in more recent versions of the PCI standard.

2003-08-08  Gary Thomas  <gary@mind.be>

	* include/pci.h: Add CYGARC_PCI_DMA_ADDRESS() macro - used to
	map CPU addresses to ones usable by PCI masters.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/io_pci.cdl: Fix doc link.

2003-02-21  Gary Thomas  <gary@mlbassoc.com>

	* src/pci.c (cyg_pci_get_device_info): While scanning active
	devices, remember the I/O and memory addresses they use.  This
	allows for new devices to be added which will not conflict.

2003-02-20  Gary Thomas  <gary@mlbassoc.com>

	* tests/pcihdr.h: Update to latest published version.

2002-05-14  Jesper Skov  <jskov@redhat.com>

	* tests/pci1.c: Fix warning.

2002-02-13  Hugo Tyson  <hmt@redhat.com>

	* doc/pci.sgml: Tidy up some typos and PROGRAMLISTING width
	issues.

2002-02-11  Mark Salter  <msalter@redhat.com>

	* doc/pci.sgml: Brought docs up to date with current code.

2002-01-31  Mark Salter  <msalter@redhat.com>

	* src/pci.c (cyg_pci_init): Set default memory and io bases here
	as the HAL_PCI_ALLOC_BASE_* macros may not be static values.

2002-01-21  Mark Salter  <msalter@redhat.com>

	* src/pci.c (cyg_pci_get_device_info): Fix setting of upper 32 bits
	for 64-bit BAR.

2001-09-28  Gary Thomas  <gthomas@redhat.com>
